<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="software.absolute.myapp.CheckinActivity">

    <TextView
        android:id="@+id/color_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/pick_color"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/color_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/color_text"
        android:orientation="horizontal">

        <Button
            android:id="@+id/red_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="6"
            android:background="#FF0000" />

        <Button
            android:id="@+id/blue_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="6"
            android:background="#1E90FF" />

        <Button
            android:id="@+id/green_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="6"
            android:background="#008000" />

    </LinearLayout>

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/color_layout"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/pick_date"
        android:textSize="23sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="10/13/2015"
        android:padding="10dp"
        android:textSize="25sp"
        android:layout_below="@+id/date_text"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save_marker" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_picker"
        android:padding="10dp"
        android:text="@string/pick_title"
        android:textSize="23sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/title_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Title here..."
        android:layout_below="@+id/title_text"/>

    <TextView
        android:id="@+id/hashtag_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_area"
        android:padding="10dp"
        android:text="@string/hash_tags"
        android:textSize="23sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/hashtag_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="#absolute #software #hamburg"
        android:layout_below="@+id/hashtag_text"/>


</RelativeLayout>
